--- a/desafios/desafio04/style.css
+++ b/desafios/desafio04/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Young+Serif&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Young Serif', serif;
+    --fonte3: 'Passion One', sans-serif;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -19,6 +30,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte3);
+    font-size: 10vw;
 }
 
 header > p {
@@ -40,22 +53,47 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 20px;
+    font-family: var(--fonte2);
+    font-size: 2.5vw;
 }
 
 section.normal {
-    background-color: white;
+    background-color: #BF495E;
     color: black;
 }
 
 section.imagem {
     background-color: rgba(15, 14, 14, 0.377);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.658);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 400px;
-    background-color: black;
+    display: inline-block;
+    padding: 10px;
+    background-color: #73364660;
+    text-shadow: 2px 2px 0px black;
 }
+
+section#img01 {
+    background-image: url(imagens/wp4922875.jpg);
+    background-position: top center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url(imagens/wp4922945.jpg);
+    background-position: center center;
+    background-size: cover;
+}
+
+section#img03 {
+    background-image: url(imagens/2yj2ank7lr511.png);
+    background-position: center center;
+    background-size: cover;
+}
+
 footer {
     background-color: black;
     color: white;
