--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -11,7 +11,7 @@
 html, body {
     width: 100vw;
     height: 100vh;
-    background-color: #233eff;
+    background-color: blue;
     background-size: contain;
     background-repeat: no-repeat;
 }
